Bug 531716 - [13] Support for JEP 355 Text Block
Fix the AIOBE that is caused by a text block that has a fully-whitespace
as last line.

Change-Id: I8f3b7fd3f02d686891788322c37b65f0b4aa6cea
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>